# flickr-to-google-photo

./: .gitignore  LICENSE  README.md  pyproject.toml
src/flickr_to_google_photo/: __init__.py  cli.py  config.py  exif_writer.py  flickr_client.py  google_photo_client.py  local_organizer.py  metadata.py  migrator.py  retry.py
tests/: test_cli.py  test_exif_writer.py  test_flickr_client.py  test_google_photo_client.py  test_local_organizer.py  test_metadata.py  test_migrator.py
